Adding AboutAndrew page and header and styling

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,8 +8,9 @@ body {
   font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
   line-height: 1.4em;
   color: #4d4d4d;
-  min-width: 230px;
-  max-width: 550px;
+  // min-width: 230px;
+  // max-width: 550px;
+  width: 100%;
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
@@ -24,6 +25,11 @@ td {
 h2 {
 	color: $vin-blue;
 }
+
+a {
+  color: white;
+}
+
 
 .savings { color: $vin-green; }
 .loss { color: $vin-red; }
